Updated READMEs and add apt upgrade
According to Docker vulnerability scanning, the base image
ros:kinetic-robot-xenial is not up-to-date

--- a/r3-base/Dockerfile
+++ b/r3-base/Dockerfile
@@ -1,5 +1,5 @@
 FROM ros:kinetic-robot-xenial
 
-RUN apt update && apt install -y \
+RUN apt update && apt upgrade -y && apt install -y \
 	less nano \
 	&& rm -rf /var/lib/apt/lists/
